--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5433/imagine_cup
+jdbc.url=jdbc:postgresql://localhost:5432/imagine_cup
 jdbc.username=postgres
-jdbc.password=password
+jdbc.password=admin
